--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+application/config/database.php
+application/views/auth/main_google.php
