added database file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ Temporary Items
 .apdisk
 application/config/database.php
 application/views/auth/main_google.php
+application/config/database.php
+application/config/database.php
