--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ application/config/database.php
 application/views/auth/main_google.php
 application/config/database.php
 application/config/database.php
+application/config/database.php
