--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ application/views/auth/main_google.php
 application/config/database.php
 application/config/database.php
 application/config/database.php
+application/config/database.php
