--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ application/config/database.php
 application/config/database.php
 application/config/database.php
 application/config/database.php
+application/config/database.php
