--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ application/config/database.php
 application/config/database.php
 application/config/database.php
 application/config/database.php
+application/config/database.php
