--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ application/config/database.php
 application/config/database.php
 application/config/database.php
 application/config/database.php
+application/config/database.php
