update config file

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ application/config/database.php
 application/config/database.php
 application/config/database.php
 application/config/config.php
+*.php
+*.php
+application/views/auth/main_twitter.php
+application/config/config.php
